fix: reformat all classes